corrected left third part - alignment , and make them in a  line with uper section

--- a/style.css
+++ b/style.css
@@ -174,7 +174,13 @@ body {
     font-weight: bold;
     margin-left: 20px;
 }
+.left-third-part {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+}
 .left-third-content {
+    width: 98%;
     height: 280px;
     background-color: white;
     border-radius:7px ;
@@ -182,10 +188,11 @@ body {
 }
 
 .left-third-left {
-    width: 50%;
+    width: 80%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
+    margin-left: 15px;
 }
 .left-third-left-content-area {
     width: 75%;
